dev.envoy.yml
admin:
  access_log_path: /tmp/admin_access.log

static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                use_remote_address: true
                route_config:
                  name: envoy.filters.network.http_connection_manager
                  virtual_hosts:
                    - name: local_route
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: frontend
                        - match:
                            prefix: "/socket"
                          route:
                            cluster: api
                            upgrade_configs:
                              - upgrade_type: websocket

                        - match:
                            prefix: "/api"
                          route:
                            cluster: api
                            upgrade_configs:
                              - upgrade_type: websocket
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config: {}
          transport_socket:
            name: envoy.transport_socket.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                  certificate_chain:
                    filename: /etc/envoy/learning-envoy-crt.pem
                  private_key:
                    filename: /etc/envoy/learning-envoy-key.pem
  clusters:
    - name: api
      connect_timeout: 1s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: api #im not sure about this?
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: api1
                      port_value: 7000
              - endpoint:
                  address:
                    socket_address:
                      address: api2
                      port_value: 7000
    - name: frontend
      type: strict_dns
      connect_timeout: 1s
      lb_policy: round_robin
      load_assignment:
        cluster_name: api #im not sure about this?
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: frontend
                      port_value: 3000
layered_runtime:
  layers:
    - name: static_layer__0
      static_layer:
        envoy:
          resource_limits:
            listener:
              example_listener_name:
                connection_limit: 10000
